close but no ciggar